lstedt changes top deal
